# cmake-init

./: CMakeLists.txt
src/: hello.cpp
